# hachyderm-aquarium

./: .gitignore
api/: Cargo.toml  _lib.rs  mastodon-activities.rs
public/: index.html
public/assets/: config.json
